<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/chef_ic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintHeight_percent=".25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"
        android:src="@drawable/chef_icon"
        />
    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chef_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register"
        android:textColor="#8BC34A"
        android:textSize="30sp"
        android:textStyle="italic"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/register_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="20dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/border_bg"
        android:layout_marginHorizontal="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="#8BC34A"
                >
                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxStrokeColor="#8BC34A"

                >
                <EditText
                    android:id="@+id/pass_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_pass_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxStrokeColor="#8BC34A"

                >
                <EditText
                    android:id="@+id/confirm_pass_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/sign_up"
                android:backgroundTint="#8BC34A"
                />
            <TextView
                android:id="@+id/have_account_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_already_have_an_account_login"
                android:gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:textColor="@color/blue"
                android:layout_marginBottom="20dp"
                />
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:strokeWidth="2dp"
                app:strokeColor="#8BC34A"
                >
                <ImageView
                    android:id="@+id/google_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/google"
                    android:layout_margin="5dp"
                    />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>




    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>