<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/chef_ic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintHeight_percent=".29"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/chef_icon"
        />
    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chef_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        style="@style/TitleText"
        />
    <com.google.android.material.internal.BaselineLayout
        android:id="@+id/baseline2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/register_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintHeight_percent=".04"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/baseline2"
        app:layout_constraintHeight_percent=".6"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:background="@drawable/border_bg"
        android:layout_marginHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="#8BC34A"
                >
                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxStrokeColor="#8BC34A"
                >
                <EditText
                    android:id="@+id/pass_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/sign_in"
                android:textColor="#8BC34A"
                android:backgroundTint="#8BC34A"
                app:boxStrokeColor="#8BC34A"
                />
            <TextView
                android:id="@+id/have_account_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_don_t_have_an_account_signup"
                android:gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:textColor="@color/blue"
                android:layout_marginBottom="10dp"
                />
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:strokeWidth="2dp"
                app:strokeColor="#8BC34A"
                android:layout_marginTop="8dp"

                >
                <ImageView
                    android:id="@+id/google_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/google"
                   android:layout_margin="5dp"
                    />

            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:id="@+id/guest_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/as_a_guest"
                android:layout_gravity="center"
                android:textStyle="italic"
                android:textSize="20sp"
                android:textColor="#8BC34A"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>