<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.calender.CalenderFragment"
    android:padding="10dp"
    >
   <TextView
       android:id="@+id/plan_tv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/plan_your_meals"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:textSize="25sp"
       android:textStyle="bold"

       />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="20dp"
    app:layout_constraintTop_toBottomOf="@id/plan_tv"
    app:layout_constraintBottom_toBottomOf="parent"
    android:orientation="vertical"
    >
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
     <TextView
         android:id="@+id/sat_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:text="@string/saturday"
         style="@style/dayTextStyle"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/sat_btn"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
        android:text="@string/add"
         android:drawableStart="@drawable/add"
         android:background="@drawable/btn_bg"
         android:paddingLeft="10dp"
         android:textColor="@color/white"/>
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recycler_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          app:layout_constraintTop_toBottomOf="@id/sat_btn"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginEnd="8dp"
          android:scaleType="fitXY"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          android:orientation="horizontal"
          />
      <View
          android:id="@+id/view1"
          android:layout_width="match_parent"
          android:layout_height="2dp"
          app:layout_constraintTop_toBottomOf="@id/recycler_view"
          android:background="@color/light_orange"
          android:layout_marginTop="10dp"
          />

      <TextView
          android:id="@+id/sun_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          app:layout_constraintTop_toBottomOf="@id/view1"
          app:layout_constraintStart_toStartOf="parent"
          android:text="@string/sunday"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="#8BC34A"
          />
      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/sun_btn"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/view1"
          android:text="@string/add"
          android:drawableStart="@drawable/add"
          android:background="@drawable/btn_bg"
          android:paddingLeft="10dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/white"/>
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recycler_view_sun"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          app:layout_constraintTop_toBottomOf="@id/sun_btn"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginEnd="8dp"
          android:scaleType="fitXY"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          android:orientation="horizontal"
          />
      <View
          android:id="@+id/view2"
          android:layout_width="match_parent"
          android:layout_height="2dp"
          app:layout_constraintTop_toBottomOf="@id/recycler_view_sun"
          android:background="@color/light_orange"
          android:layout_marginTop="10dp"
          />



      <TextView
          android:id="@+id/mon_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/view2"
          app:layout_constraintStart_toStartOf="parent"
          android:text="@string/monday"
          style="@style/dayTextStyle"
          />
      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/mon_btn"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/view2"
          android:text="@string/add"
          android:drawableStart="@drawable/add"
          android:background="@drawable/btn_bg"
          android:paddingLeft="10dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/white"/>
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recycler_view_mon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          app:layout_constraintTop_toBottomOf="@id/mon_btn"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginEnd="8dp"
          android:scaleType="fitXY"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          android:orientation="horizontal"
          />
      <View
          android:id="@+id/view3"
          android:layout_width="match_parent"
          android:layout_height="2dp"
          app:layout_constraintTop_toBottomOf="@id/recycler_view_mon"
          android:background="@color/light_orange"
          android:layout_marginTop="10dp"
          />



      <TextView
          android:id="@+id/tue_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/view3"
          app:layout_constraintStart_toStartOf="parent"
          android:text="Tuesday"
          style="@style/dayTextStyle"
          />
      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tue_btn"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/view3"
          android:text="@string/add"
          android:drawableStart="@drawable/add"
          android:background="@drawable/btn_bg"
          android:paddingLeft="10dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/white"/>
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recycler_view_tue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          app:layout_constraintTop_toBottomOf="@id/tue_btn"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginEnd="8dp"
          android:scaleType="fitXY"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          android:orientation="horizontal"
          />
      <View
          android:id="@+id/view4"
          android:layout_width="match_parent"
          android:layout_height="2dp"
          app:layout_constraintTop_toBottomOf="@id/recycler_view_tue"
          android:background="@color/light_orange"
          android:layout_marginTop="10dp"
          />


      <TextView
          android:id="@+id/wed_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/view4"
          app:layout_constraintStart_toStartOf="parent"
          android:text="@string/wednesday"
          style="@style/dayTextStyle"
          />
      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/wed_btn"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/view4"
          android:text="@string/add"
          android:drawableStart="@drawable/add"
          android:background="@drawable/btn_bg"
          android:paddingLeft="10dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/white"/>
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recycler_view_wed"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          app:layout_constraintTop_toBottomOf="@id/wed_btn"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginEnd="8dp"
          android:scaleType="fitXY"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          android:orientation="horizontal"
          />
      <View
          android:id="@+id/view5"
          android:layout_width="match_parent"
          android:layout_height="2dp"
          app:layout_constraintTop_toBottomOf="@id/recycler_view_wed"
          android:background="@color/light_orange"
          android:layout_marginTop="10dp"
          />


      <TextView
          android:id="@+id/thurs_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/view5"
          app:layout_constraintStart_toStartOf="parent"
          android:text="@string/thursday"
          style="@style/dayTextStyle"
          />
      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/thurs_btn"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/view5"
          android:text="@string/add"
          android:drawableStart="@drawable/add"
          android:background="@drawable/btn_bg"
          android:paddingLeft="10dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/white"/>
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recycler_view_thurs"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          app:layout_constraintTop_toBottomOf="@id/thurs_btn"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginEnd="8dp"
          android:scaleType="fitXY"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          android:orientation="horizontal"
          />
      <View
          android:id="@+id/view6"
          android:layout_width="match_parent"
          android:layout_height="2dp"
          app:layout_constraintTop_toBottomOf="@id/recycler_view_thurs"
          android:background="@color/light_orange"
          android:layout_marginTop="10dp"
          />


      <TextView
          android:id="@+id/fri_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/view6"
          app:layout_constraintStart_toStartOf="parent"
          android:text="@string/friday"
          style="@style/dayTextStyle"
          />
      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/fri_btn"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/view6"
          android:text="@string/add"
          android:drawableStart="@drawable/add"
          android:background="@drawable/btn_bg"
          android:paddingLeft="10dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/white"/>
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recycler_view_fri"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          app:layout_constraintTop_toBottomOf="@id/fri_btn"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginEnd="8dp"
          android:scaleType="fitXY"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          android:orientation="horizontal"
          />
      <View
          android:id="@+id/view7"
          android:layout_width="match_parent"
          android:layout_height="2dp"
          app:layout_constraintTop_toBottomOf="@id/recycler_view_fri"
          android:background="@color/light_orange"
          android:layout_marginTop="10dp"
          />


  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>