<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.home.HomeFragment"
    android:paddingHorizontal="10dp"

    >
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"

       >
       <TextView
           android:id="@+id/inspiration_tv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           android:text="@string/daily_inspiration"
           android:textSize="30sp"
           android:textColor="#8BC34A"
           android:textStyle="bold"
           />
       <com.google.android.material.card.MaterialCardView
           android:id="@+id/meal_card_view"
           app:cardCornerRadius="20dp"
           android:layout_margin="16dp"
           android:layout_width="match_parent"
           android:layout_height="380dp"
           app:layout_constraintTop_toBottomOf="@id/inspiration_tv"
           app:strokeColor="#8BC34A"
           app:strokeWidth="2dp"

           >
           <ProgressBar
               android:id="@+id/img_progress_bar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal|center_vertical"
               />
           <ImageView
               android:id="@+id/meal_img"
               android:layout_height="310dp"
               android:layout_width="match_parent"
               tools:src="@drawable/ic_launcher_background"
               android:scaleType="fitXY"
               />
           <TextView
               android:id="@+id/meal_title_tv"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               tools:text="titledjnjjjjjjjjjjjjjjjjjjjjjj
jjjjjjjjjjjjjjjjjj
mmmmmmmmmmmmmmmmmm"
               android:layout_marginBottom="10dp"
               android:layout_gravity="bottom"
               android:paddingHorizontal="20dp"
               android:textSize="20sp"
               />
       </com.google.android.material.card.MaterialCardView>
       <ProgressBar
           android:id="@+id/recycler_progress_bar"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="@id/category_recycler_view"
           app:layout_constraintBottom_toBottomOf="@id/category_recycler_view"
           app:layout_constraintStart_toStartOf="@id/category_recycler_view"
           app:layout_constraintEnd_toEndOf="@id/category_recycler_view"
           android:visibility="gone"
           />
       <TextView
           android:id="@+id/category_tv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/meal_card_view"
           app:layout_constraintStart_toStartOf="parent"
           android:text="@string/categories"
           android:layout_marginTop="25dp"
           android:textColor="@color/orange"
           android:textSize="25sp"
           android:textStyle="bold"
           />
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/category_recycler_view"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/category_tv"
           android:layout_marginTop="5dp"
           android:orientation="vertical"
           app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
           app:spanCount="2"
           tools:listitem="@layout/category_item"
           />



       <ProgressBar
           android:id="@+id/ingredient_progress_bar"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="@id/ingredients_recycler_view"
           app:layout_constraintBottom_toBottomOf="@id/ingredients_recycler_view"
           app:layout_constraintStart_toStartOf="@id/ingredients_recycler_view"
           app:layout_constraintEnd_toEndOf="@id/ingredients_recycler_view"
           />
       <TextView
           android:id="@+id/ingredient_tv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/category_recycler_view"
           app:layout_constraintStart_toStartOf="parent"
           android:text="@string/ingredients"
           android:layout_marginTop="25dp"
           android:textColor="@color/orange"
           android:textSize="25sp"
           android:textStyle="bold"
           />
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/ingredients_recycler_view"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/ingredient_tv"
           android:layout_marginTop="5dp"
           android:orientation="vertical"
           app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
           app:spanCount="2"
           tools:listitem="@layout/category_item"
           />
       <TextView
           android:id="@+id/countery_tv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/ingredients_recycler_view"
           app:layout_constraintStart_toStartOf="parent"
           android:text="@string/countries"
           android:layout_marginTop="25dp"
           android:textColor="@color/orange"
           android:textSize="25sp"
           android:textStyle="bold"
           />
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/countries_recycler_view"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/countery_tv"
           android:layout_marginTop="5dp"
           android:orientation="vertical"
           app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
           app:spanCount="2"
           tools:listitem="@layout/category_item"
           />


   </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>